# ai-mylua-lsp

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  FIELD_ANALYSIS.md  FIELD_QUICK_REFERENCE.md  FIELD_SOURCES_INDEX.md  FIELD_VISUAL_SUMMARY.md  LICENSE  README.md  README_FIELD_ANALYSIS.md  ai-readme.md
lsp/crates/mylua-lsp/: Cargo.toml  build.rs
lsp/crates/mylua-lsp/src/: aggregation.rs  aggregation.rs.orig  call_hierarchy.rs  completion.rs  config.rs  diagnostic_scheduler.rs  diagnostics.rs  document.rs  document_highlight.rs  document_link.rs  emmy.rs  folding_range.rs  goto.rs  handlers.rs  hover.rs  indexing.rs  inlay_hint.rs  lib.rs  logger.rs  lua_builtins.rs  lua_symbol.rs  main.rs  memory_profile.rs  references.rs  rename.rs  resolver.rs  scope.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  summary.rs  summary_builder.rs  summary_cache.rs  symbols.rs  syntax_kind.rs  table_shape.rs  type_inference.rs  type_system.rs  types.rs  uri_id.rs  (+4 more)
lsp/crates/mylua-lsp/tests/: test_call_hierarchy.rs  test_completion.rs  test_completion_resolve.rs  test_diagnostic_scheduler.rs  test_diagnostic_suppress.rs  test_diagnostics.rs  test_document_highlight.rs  test_document_link.rs  test_emmy_self_and_multireturn.rs  test_folding_range.rs  test_function_name_index.rs  test_goto.rs  test_helpers.rs  test_hover.rs  test_inlay_hint.rs  test_meta.rs  test_mylua_parse.rs  test_parse.rs  test_perf_enum.rs  test_references.rs  test_rename.rs  test_runtime_version.rs  test_scope.rs  test_selection_range.rs  test_semantic_tokens_delta.rs  test_shape_owner.rs  (+8 more)
(+148 files in other folders)
